# utilities

./: .gitignore  CMakeLists.txt  files.cpp  files.h
src/: CMakeLists.txt  strings.cpp  strings.h
test/: CMakeLists.txt  files_test.cpp  strings_test.cpp
test/resources/: test_parse.txt
util/: CMakeLists.txt  files.cpp  strings.cpp
util/include/util/: files.h  strings.h
